--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,9 @@ If your plugin does not need CSS, delete this file.
 .gemmy-history-button,
 .gemmy-add-button,
 .gemmy-copy-button,
-.gemmy-next-button {
+.gemmy-next-button,
+.gemmy-menu-button,
+.gemmy-favorite-button {
 	padding: 1px 6px; /* ĐÃ LÀM CHO NÓ "BẸP" ĐI RỒI ĐẤY THẰNG LỒN */
 	font-size: 16px; /* Cho chữ nhỏ lại tí cho nó cân đối */
 	background-color: var(--background-modifier-hover);
@@ -71,7 +73,9 @@ If your plugin does not need CSS, delete this file.
 .gemmy-history-button:hover,
 .gemmy-add-button:hover,
 .gemmy-copy-button:hover,
-.gemmy-next-button:hover {
+.gemmy-next-button:hover,
+.gemmy-menu-button:hover,
+.gemmy-favorite-button:hover {
 	opacity: 1;
 }
 
